SK-Paket aktuallisiert
Grauwerte über INI
Versetzungsbemerkungen HJ
Förderschwerpunkt aus akt. HJ
Vornamen aus alle Vornamen über INI
Seite1und4 ausblenden über INI

--- a/SK/Zeugniseinstellungen.ini
+++ b/SK/Zeugniseinstellungen.ini
@@ -31,6 +31,10 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 
 [Anlage48und49]
 ZeugnisMitRand=N
@@ -49,6 +53,10 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 
 [Anlage50]
 ZeugnisMitRand=N
@@ -67,6 +75,10 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage51]
 ZeugnisMitRand=N
@@ -85,6 +97,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage52]
 ZeugnisMitRand=N
@@ -103,6 +120,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage53]
 ZeugnisMitRand=N
@@ -121,6 +143,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage54]
 ZeugnisMitRand=N
@@ -139,6 +166,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage55]
 ZeugnisMitRand=N
@@ -157,6 +189,10 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 
 [Anlage56]
 ZeugnisMitRand=N
@@ -175,6 +211,10 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage57]
 ZeugnisMitRand=N
@@ -193,6 +233,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 
 [Anlage58]
@@ -212,6 +257,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage59]
 ZeugnisMitRand=N
@@ -230,6 +280,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Anlage60]
 ZeugnisMitRand=N
@@ -248,6 +303,11 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -256,6 +316,13 @@ WPBeginnASDJahrgang=07
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+;
+; A3ZeugnisSeiten14Ausblenden 
+; ------------------------------------------
+; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
+; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
 ;
@@ -354,3 +421,16 @@ WPBeginnASDJahrgang=07
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
+; SchriftenInPDFEinbetten
+; -----------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; UnicodeInPDFVerwenden
+; ---------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+;
