Seite 1 und 4 ausblenden, Abfrage Bemerkung FÖS
Die neue INI-Option zum Ausblenden der Seiten 1 und 4 bei A3 Zeugnissen eingefügt;
bei Abschlusszeugnissen Abfrage eingefügt, ob FÖS-Bemerkung gedruckt werden soll.

--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -2,7 +2,7 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 27.02.2020 (Plümper)
+; Format der INI-Datei vom 27.03.2020 (Plümper)
 ; INI-Datei für die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -74,6 +74,7 @@ UnicodeInPDFVerwenden=N
 ; Anlagen 42: Abgangszeugnis Gesamtschule
 [Anlage42]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -94,6 +95,7 @@ UnicodeInPDFVerwenden=N
 ; Anlagen 43: Abschlusszeugnis Hauptschulabschluss
 [Anlage43]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -114,6 +116,7 @@ UnicodeInPDFVerwenden=N
 ; Anlagen 44: Abschlusszeugnis Hauptschulabschluss nach Klasse 10
 [Anlage44]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -134,6 +137,7 @@ UnicodeInPDFVerwenden=N
 ; Anlage 45: Abschlusszeugnis Mittlerer Abschluss (3a ohne Q und 3b mit Q)
 [Anlage45]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -160,6 +164,12 @@ UnicodeInPDFVerwenden=N
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; A3ZeugnisSeiten14Ausblenden 
+; ------------------------------------------
+; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
+; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
 ; FarbeNotenfeld
