--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -2,7 +2,7 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 15.11.2019 (Plümper)
+; Format der INI-Datei vom 27.03.2020 (Plümper)
 ; Enthalten sind die Einstellungen für die Anlagen 12-18 (Hauptschule)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -18,7 +18,9 @@
 ; Anlagen 12 und 13: Hauptschule: Reguläres Halbjahres- und Versetzungszeugnis Klassen 5-9 und 10.1
 [Anlage12u13]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
@@ -32,10 +34,14 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 14: Hauptschule: Überweisungszeugnis
 [Anlage14]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -46,10 +52,15 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 15: Hauptschule: Abgangszeugnis
 [Anlage15]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -60,10 +71,15 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 16, 17 und 18: Hauptschule: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
 [Anlagen16u17u18]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
+ZeugnisVorname=V
+FarbeNotenfeld=192,192,192
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -75,25 +91,53 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Angaben zu den möglichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
+; 
 ; ZeugnisMitRand 
-; --------------
+; ==============
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
 ;
+; A3ZeugnisSeiten14Ausblenden 
+; ===========================
+; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
+; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+;
+; FarbeNotenfeld
+; ==============
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
+; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
+;
+;
+;
 ; WPBeginnASDJahrgang
-; -------------------
+; ===================
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 
+; Mögliche Angaben: 06 oder 07 oder 08
+;
+;
+;
+; ZeugnisVorname
+; ==============
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld „Weitere Vornamen“
+; das Feld Vorname verwendet.
+; Mögliche Angaben: 
+; V=Nur das Feld „Vorname“ verwenden 
+; W=Das Feld „Vorname“ durch Anhängen des Feldes „Weitere Vornamen“ ergänzen
+; A=Nur das Feld „Weitere Vornamen“ verwenden, es wird damit als „ALLE Vornamen“ interpretiert
 ;
 ;
 ; ZeugnisDatumQuelle
-; ------------------
+; ==================
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
 ; Mögliche Angaben:
 ; Z=Zeugnisdatum des akt. Lernabschnittes
@@ -105,39 +149,43 @@ SchulabschlussQuelle=H
 ; I=Datum aus INI-Datei
 ; F=Abfrage beim Formularaufruf
 ;
+;
 ; ZeugnisDatumAngabe
-; ------------------
+; ==================
 ; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
 ; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
+;
 ; ZeugnisInformationenQuelle 
-; ----------------------
+; ==========================
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
 ; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
 ; 
+;
 ; ZeugnisInformationenWiederanfangAngabe 
-; --------------------------------------
+; ======================================
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
 ; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
+;
 ; ZeugnisInformationenElternsprechtagAngabe1 
-; ------------------------------------------
+; ==========================================
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
 ; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
+;
 ; ZeugnisInformationenElternsprechtagAngabe2 
-; ------------------------------------------
+; ==========================================
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
 ; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
-;
 ; 
 ; UnterschriftenPersonen
-; ----------------------
+; ======================
 ; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
 ; UnterschriftenSLALText einen Wert erhalten.
 ; Mögliche Angaben: 
@@ -145,49 +193,72 @@ SchulabschlussQuelle=H
 ; A	für Abteilungsleitung und Klassenleitung aus Datenbank
 ; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
 ;
+;
 ; UnterschriftenSLALText
-; ----------------------
+; ======================
 ; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
 ; den Wert T haben.
 ; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ;
+;
 ; UnterschriftenMitNachnamen
-; --------------------------
+; ==========================
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
 ; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+;
 ; UnterschriftenMitAmtsbezeichnungen 
-; ----------------------------------
+; ==================================
 ; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+;
 ; UnterschriftenMitVornamen
-; -------------------------
+; =========================
 ; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+;
 ; UnterschriftenMitVornamenNurErster 
-; ----------------------------------
+; ==================================
 ; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+;
 ; UnterschriftenMitTitel
-; ----------------------
+; ======================
 ; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+;
 ; UnterschriftenMitStvKlassenlehrer
-; ---------------------------------
+; =================================
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
 ;
 ; SchulabschlussQuelle
-; ------------------
+; ====================
 ; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
 ; Mögliche Angaben:
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
+;
+;
+; SchriftenInPDFEinbetten
+; =======================
+; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+;
+; UnicodeInPDFVerwenden
+; =====================
+; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+;
