RS Anl. 19-24 angepasst (ausser Graustufen)
INI ersetzt
ZeugnisEinstellungenLaden ersetzt
Vornamen angepasst
Umstellung Versetzungsbemerkung
Umstellung Förderbemerkung
Seite 4 und 1 ausblenden eingefügt.

--- a/RS/Zeugniseinstellungen.ini
+++ b/RS/Zeugniseinstellungen.ini
@@ -2,7 +2,7 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 15.11.2019 (Plümper)
+; Format der INI-Datei vom 27.03.2020 (Plümper)
 ; Enthalten sind die Einstellungen für die Anlagen 19-24 (Realschule/Peters)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -18,6 +18,8 @@
 ; Anlage 19: Realschule: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-10.1
 [Anlage19]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -32,10 +34,14 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 20: Realschule: Überweisungszeugnis
 [Anlage20]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -46,10 +52,15 @@ UnterschriftenMitVornamen=N
 UnterschriftenMitVornamenNurErster=N
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 21: Realschule: Abgangszeugnis A4 und A3
 [Anlage21]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -60,10 +71,15 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 22, 23 und 24: Realschule: Abschlusszeugnisse für HA09, HA10 und FOR einschließlich FOR mit Berechtigung zum Besuch der gym. Oberstufe
 [Anlage22u23u24]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -75,22 +91,47 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Angaben zu den möglichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
+; 
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+; A3ZeugnisSeiten14Ausblenden 
+; ------------------------------------------
+; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
+; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; FarbeNotenfeld
+; --------------
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
+; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
+;
+;
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 
+; Mögliche Angaben: 06 oder 07 oder 08
 ;
+;
+;
+; ZeugnisVorname
+; -------------------
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld „Weitere Vornamen“
+; das Feld Vorname verwendet.
+; Mögliche Angaben: 
+; V=Nur das Feld „Vorname“ verwenden 
+; W=Das Feld „Vorname“ durch Anhängen des Feldes „Weitere Vornamen“ ergänzen
+; A=Nur das Feld „Weitere Vornamen“ verwenden, es wird damit als „ALLE Vornamen“ interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
@@ -191,3 +232,18 @@ SchulabschlussQuelle=H
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
+;
+;
+;
+; SchriftenInPDFEinbetten
+; -----------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; UnicodeInPDFVerwenden
+; ---------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
