--- a/Inklusion/Inklusion_DINA4/Ankreuzform/Sek1-Inklusionszeugnis_Hybridform.ini
+++ b/Inklusion/Inklusion_DINA4/Ankreuzform/Sek1-Inklusionszeugnis_Hybridform.ini
@@ -3,6 +3,7 @@ Deutsch
 Gesellschaftslehre
 Naturwissenschaften
 Mathematik
+Arbeitslehre
 KunstMusik
 Fremdsprachen
 Religion
@@ -13,6 +14,7 @@ Deutsch
 Gesellschaftslehre
 Naturwissenschaften
 Mathematik
+Arbeitslehre
 
 [Notenzeugnisreihenfolge_Rechts]
 KunstMusik
@@ -26,7 +28,7 @@ MitJahrgang
 Blocksatz
 SchriftgroesseBemerkungen=9
 NotenAbJahrgang=05
-Noten2SpaltigAbJahrgang=05
+Noten2SpaltigAbJahrgang=09
 Zusammenhalten
 Folgejahrgang
 Unterschrift=VN
