Korrekturen RS mit HS-Bidungsgang
Epochalfächer auf 25_26 wurden nicht gedruckt
In der INI fehlte die Option Seite1_4 ausblenden

--- a/RS/HS-Bildungsgang/Zeugniseinstellungen.ini
+++ b/RS/HS-Bildungsgang/Zeugniseinstellungen.ini
@@ -58,6 +58,7 @@ UnicodeInPDFVerwenden=N
 ; Anlage 28: Realschule: Abgangszeugnis des HS-Bildungsganges A4 und A3
 [Anlage28]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -76,6 +77,7 @@ UnicodeInPDFVerwenden=N
 ; Anlagen 29 und 30: Realschule: Abschlusszeugnisse des HS-Bildungsganges für HA09, HA10
 [Anlage29u30]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
