--- a/SK/kooperativ/Zeugniseinstellungen.ini
+++ b/SK/kooperativ/Zeugniseinstellungen.ini
@@ -174,7 +174,7 @@ ZeugnisVorname=A
 
 [Anlage55]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
@@ -214,7 +214,7 @@ WPBeginnASDJahrgang=07
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
+ZeugnisVorname=V
 
 [Anlage57]
 ZeugnisMitRand=N
@@ -235,10 +235,8 @@ UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
-A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
-
 
 [Anlage58]
 ZeugnisMitRand=N
@@ -262,6 +260,7 @@ UnicodeInPDFVerwenden=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
+
 
 [Anlage59]
 ZeugnisMitRand=N
@@ -287,6 +286,29 @@ FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
 
 [Anlage60]
+ZeugnisMitRand=N
+ZeugnisDatumQuelle=V
+ZeugnisDatumAngabe=01.08.2019
+ZeugnisInformationenQuelle=I
+ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
+ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
+UnterschriftenMitNachnamen=J
+UnterschriftenMitAmtsbezeichnungen=J
+UnterschriftenMitVornamen=J
+UnterschriftenMitVornamenNurErster=J
+UnterschriftenMitTitel=J
+UnterschriftenMitStvKlassenlehrer=N
+WPBeginnASDJahrgang=07
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=A
+
+[Anlage61]
 ZeugnisMitRand=N
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=01.08.2019
