Vorschlag für Versetzungsvermerk-Funktion und zugehörogen neuen INI-Parameter "VersetzungBeginnASDJahrgang"

--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -1,17 +1,17 @@
-[Eînleitung]
+[Einleitung]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 27.03.2020 (Plümper)
-; Enthalten sind die Einstellungen für die Anlagen 31-37 (Gymnasium)
+; Format der INI-Datei vom 01.09.2021 (PlÃ¼mper)
+; Enthalten sind die Einstellungen fÃ¼r die Anlagen 31-37 (Gymnasium)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Allgemeines
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Zeilen, die mit einem Semikolon beginnen sind Kommentare und werden ignoriert.
-; Für jedes Zeugnis (Anlagen in der BASS) können hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
-; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zur den Optionen findet sich am Ende der Datei
-; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
+; fÃ¼r jedes Zeugnis (Anlagen in der BASS) kÃ¶nnen hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
+; Es folgen nun die mÃ¶glichen Optionen zur Einstellung des Zeugnisverhaltens. Eine ErklÃ¤rung zur den Optionen findet sich am Ende der Datei
+; Nicht jede Einstellung wird von jedem Zeugnisformular unterstÃ¼tzt.
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ;
 ;
@@ -19,6 +19,7 @@
 [Anlage31u35]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
+VersetzungBeginnASDJahrgang=06
 ZeugnisVorname=V
 ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
@@ -37,10 +38,11 @@ UnterschriftenMitStvKlassenlehrer=N
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 
-; Anlage 32: Gymnasium: Überweisungszeugnis
+; Anlage 32: Gymnasium: "berweisungszeugnis
 [Anlage32]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
+VersetzungBeginnASDJahrgang=06
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
@@ -59,6 +61,7 @@ UnicodeInPDFVerwenden=N
 [Anlage33]
 ZeugnisMitRand=N
 A3ZeugnisSeiten14Ausblenden=N
+VersetzungBeginnASDJahrgang=06
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -74,11 +77,12 @@ UnterschriftenMitStvKlassenlehrer=N
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 
-; Anlagen 34, 36 und 37: Gymnasium: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
+; Anlagen 34, 36 und 37: Gymnasium: Abschlusszeugnisse fÃ¼r HA, HA10 und FOR einschlieÃŸlich Berechtigung gym. Oberstufe
 [Anlage34u36u37]
 ZeugnisMitRand=N
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
+VersetzungBeginnASDJahrgang=06
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
@@ -96,50 +100,55 @@ UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Angaben zu den möglichen Optionen
+; Angaben zu den mÃ¶glichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; 
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
-; Mögliche Angaben: J=Ja und N=Nein
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; A3ZeugnisSeiten14Ausblenden 
 ; ------------------------------------------
 ; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
 ; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
-; Mögliche Angaben: J=Ja und N=Nein
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; FarbeNotenfeld
 ; --------------
-; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
-; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,GrÃ¼n,Blau). Standardwert ist 192,192,192
+; MÃ¶gliche Angaben: R,G,B, jeweils mit Werten von 0-255 fÃ¼r R,G,B
 ;
 ;
+;
+; VersetzungBeginnASDJahrgang
+; -------------------
+; legt fest, in welcher Jahrgangsstufe das erste mal eine Versetzung ausgesprochen wird.
+; MÃ¶gliche Angaben: 05 oder 06 oder 07 oder 08 oder 09
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 oder 08
+; MÃ¶gliche Angaben: 06 oder 07 oder 08
 ;
 ;
 ;
 ; ZeugnisVorname
 ; -------------------
-; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld „Weitere Vornamen“
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. UnabhÃ¤ngig von der Wahl der Option wird bei einem leeren Feld "Weitere Vornamen"
 ; das Feld Vorname verwendet.
-; Mögliche Angaben: 
-; V=Nur das Feld „Vorname“ verwenden 
-; W=Das Feld „Vorname“ durch Anhängen des Feldes „Weitere Vornamen“ ergänzen
-; A=Nur das Feld „Weitere Vornamen“ verwenden, es wird damit als „ALLE Vornamen“ interpretiert
+; MÃ¶gliche Angaben: 
+; V=Nur das Feld "Vorname" verwenden 
+; W=Das Feld "Vorname" durch Anh"ngen des Feldes "Weitere Vornamen" ergÃ¤nzen
+; A=Nur das Feld "Weitere Vornamen" verwenden, es wird damit als "ALLE Vornamen" interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
-; Mögliche Angaben:
+; MÃ¶gliche Angaben:
 ; Z=Zeugnisdatum des akt. Lernabschnittes
 ; K=Konferenzdatum des akt. Lernabschnittes 
-; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
+; V=entspricht Z mit der Ausnahme fÃ¼r nicht versetzte SchÃ¼ler im zweiten Halbjahr, dort wird K gewÃ¤hlt
 ; E=Entlassdatum
 ; S=Schulwechseldatum
 ; A=Aktuelles Tagesdatum
@@ -148,32 +157,32 @@ UnicodeInPDFVerwenden=N
 ;
 ; ZeugnisDatumAngabe
 ; ------------------
-; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
-; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
+; wird nur gewÃ¤hlt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
+; MÃ¶gliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
 ; ZeugnisInformationenQuelle 
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
-; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
+; MÃ¶gliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
 ; 
 ; ZeugnisInformationenWiederanfangAngabe 
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+; MÃ¶gliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe1 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; MÃ¶gliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe2 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; MÃ¶gliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ;
 ; 
@@ -181,56 +190,56 @@ UnicodeInPDFVerwenden=N
 ; ----------------------
 ; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
 ; UnterschriftenSLALText einen Wert erhalten.
-; Mögliche Angaben: 
-; S für Schulleitung und Klassenleitung aus Datenbank
-; A	für Abteilungsleitung und Klassenleitung aus Datenbank
-; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
+; MÃ¶gliche Angaben: 
+; S fÃ¼r Schulleitung und Klassenleitung aus Datenbank
+; A	fÃ¼r Abteilungsleitung und Klassenleitung aus Datenbank
+; T	fÃ¼r Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
+; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. DafÃ¼r muss der Paramater UnterschriftenPersonen
 ; den Wert T haben.
-; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+; MÃ¶gliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis Ã¼bernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
-; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
-; Mögliche Angaben: J=Ja und N=Nein
+; werden sollen. Wenn hier die Option N gew"hlt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitAmtsbezeichnungen 
 ; ----------------------------------
-; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergÃ¤nzt werden soll.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamen
 ; -------------------------
-; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergÃ¤nzt werden soll.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamenNurErster 
 ; ----------------------------------
-; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen ber"cksichtigt werden soll.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitTitel
 ; ----------------------
-; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob ein Titel bei Unterschriften ergÃ¤nzt werden soll.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitStvKlassenlehrer
 ; ---------------------------------
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ;
 ; SchulabschlussQuelle
 ; ------------------
 ; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
-; Mögliche Angaben:
+; MÃ¶gliche Angaben:
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
-; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
+; L=Eintrag aus Liste der AbschlÃ¼sse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
 ;
@@ -238,13 +247,13 @@ UnicodeInPDFVerwenden=N
 ; SchriftenInPDFEinbetten
 ; -----------------------
 ; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; Mögliche Angaben: J=Ja und N=Nein
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groÃŸ werden.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnicodeInPDFVerwenden
 ; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob bei der Erzeugung der PDF-Dateien fÃ¼r Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groÃŸ werden.
+; MÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ;
